<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.vijaya.myorder.MainActivity">

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/pepperoni_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/pepperoni"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/sausage_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/sausage"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ham_checked"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/ham"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/mozzarella_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/mozzarella"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/mushrooms_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/mushrooms"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/black_olives_checked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/black_olives"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="monospace" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="reDirectToOrderSummary"
                android:text="Summary" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="ORDER" />
    </LinearLayout>
</ScrollView>